--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<!-- Core Meta Data -->
 		<meta
 			name="description"
-			content="Frontend Mentor - Social links profile solution." />
+			content="Frontend Mentor - Social links profile solution."
+		/>
 		<meta name="keywords" content="Frontend Mentor, Social links profile" />
 
 		<!-- Behavioral Meta Data -->
@@ -22,7 +23,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
 			rel="stylesheet"
-			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" />
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+		/>
 
 		<!-- Styles -->
 		<link rel="stylesheet" href="css/main.css" />
@@ -41,17 +43,15 @@
 								src="./images/avatar.jpeg"
 								width="80"
 								height="80"
-								alt="Jessica Randall" />
+								alt="Jessica Randall"
+							/>
 						</div>
 						<div class="card__title-wrap">
 							<h2 class="card__title">Jessica Randall</h2>
-							<p class="card__subtitle">
-								London, United Kingdom
-							</p>
+							<p class="card__subtitle">London, United Kingdom</p>
 						</div>
 						<p class="card__desc">
-							&Prime;Front-end developer and avid
-							reader.&Prime;
+							&Prime;Front-end developer and avid reader.&Prime;
 						</p>
 					</div>
 					<div class="card__body">
